--- a/versions_manifest.json
+++ b/versions_manifest.json
@@ -1,5 +1,8 @@
 {
     "omni": "0.1.1",
     "crux2D": "0.1.5",
-    "Opul": "0.0.4"
+    "Opul": "0.0.5",
+    "g_libs": "1.1.7",
+    "gd_app": "1.0.4",
+    "gd_app_ui": "1.0.2"
 }
