added Silog, Silog_Dev, updated Opul, g_libs, gd_app

--- a/versions_manifest.json
+++ b/versions_manifest.json
@@ -1,8 +1,10 @@
 {
     "omni": "0.1.1",
     "crux2D": "0.1.5",
-    "Opul": "0.5.0",
-    "g_libs": "1.1.9",
-    "gd_app": "1.0.6",
-    "gd_app_ui": "1.0.3"
+    "Opul": "0.9.15",
+    "g_libs": "1.2.8",
+    "gd_app": "1.0.11",
+    "gd_app_ui": "1.0.3",
+    "Silog": "0.4.12",
+    "Silog_Dev": "0.0.2"
 }
