--- a/versions_manifest.json
+++ b/versions_manifest.json
@@ -2,9 +2,10 @@
     "omni": "0.1.1",
     "crux2D": "0.1.5",
     "Opul": "0.9.15",
-    "g_libs": "1.2.8",
+    "g_libs": "1.2.9",
     "gd_app": "1.0.11",
     "gd_app_ui": "1.0.3",
     "Silog": "0.4.12",
-    "Silog_Dev": "0.0.2"
+    "Silog_Dev": "0.0.2",
+    "BrewBolt": "0.1.1"
 }
